--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Latergram</title>
+    <link rel="icon" type="image/x-icon" href="icon/icons8-mehrere-kameras-32.png">
+    
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts.css">
+    <script src="script.js"></script>
+
 </head>
+
 <body>
 
-    <h1>Header</h1>
-    
+<header class="header dpf">
+    <div class="header-container dpf">
+        <div class="header-logo dpf">
+            <p class="header-logo-text">Latergram</p>
+            <img src="icon/icons8-pfeil_-ausklappen-16.png">
+        </div>
+        <input class="header-input" type="text" placeholder="Suchen">
+        <div>
+            <img class="header-icon home-icon-padding" src="icon/icons8-startseite-32.png">
+            <img class="header-icon-arrow" src="icon/icons8-gps-gerät-32.png">
+            <img class="header-icon" src="icon/icons8-plus-2-32.png">
+            <img class="header-icon" src="icon/icons8-kompass-32.png">
+            <img class="header-icon" src="icon/icons8-herzen-32.png">
+            <img class="header-icon" src="icon/icons8-weiblicher-benutzer-eingekreist-32.png">
+        </div>
+    </div>
+</header>
 </body>
+
 </html>
